--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "socket.io": "^2.3.0",
     "victor": "^1.1.0"
   }
 }
